--- a/style.css
+++ b/style.css
@@ -91,12 +91,15 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-brand {
     padding: 8px 0;
     margin-right: 20px;
+    display: flex;
+    align-items: center;
 }
 
 .logo-img {
-    max-height: 75px;
+    max-height: 70px;
     width: auto;
     display: block;
+    object-fit: contain;
 }
 
 /* Hero Section */
@@ -285,6 +288,9 @@ footer a:hover {
 
 /* Responsive Tweaks */
 @media (max-width: 991.98px) {
+    .navbar-brand {
+        padding: 5px 0;
+    }
     .social-buttons {
         margin-top: 1rem;
     }
@@ -306,8 +312,8 @@ footer a:hover {
     }
     
     .navbar-brand img {
-        max-width: 160px;
-        max-height: 60px;
+        max-width: 150px;
+        max-height: 50px;
     }
     
     .navbar-toggler {
